# HTTPServer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  vcpkg.json
include/config/: LoggerConfig.hpp
include/controller/: UserController.hpp
include/enum/: ConnectionState.hpp  ContentTypeEnum.hpp  FileEnum.hpp  HttpEnum.hpp  Phase.hpp
include/handler/json/: Json.hpp
include/handler/request/: BaseReader.hpp  HttpRequestParser.hpp  HttpRequestReader.hpp  HttpsRequestReader.cpp  HttpsRequestReader.hpp
include/handler/response/: HttpResponseBuilder.hpp  HttpResponseParser.hpp  (+3 more)
include/http/: HttpRequest.hpp  HttpRequestParser.hpp  HttpResponse.hpp
include/model/: User.hpp
include/network/: ApiRouter.hpp  EpollEventHandler.hpp  Server.hpp  SocketHelper.hpp
include/thread_pool/: thread_pool.hpp
include/tls/: TLS.hpp
include/utils/: Constants.hpp  Helper.hpp  Logger.hpp
public/: 1782733270_hello.txt  1782733270_tut.txt  1782905330_prompt.txt  index.html  script.js  style.css
script/: build.sh  build_and_run.sh  gen_certs.sh  run.sh
src/: main.cpp
src/config/: LoggerConfig.cpp
src/controller/: UserController.cpp
src/enum/: ConnectionState.cpp  ContentTypeEnum.cpp  FileEnum.cpp  HttpEnum.cpp  Phase.cpp
src/http/: HttpRequest.cpp  HttpRequestParser.cpp  HttpRequestReader.cpp  HttpResponse.cpp
src/model/: User.cpp
src/network/: ApiRouter.cpp  EpollEventHandler.cpp  Server.cpp  SocketHelper.cpp
src/thread_pool/: thread_pool.cpp
src/tls/: TLS.cpp
src/utils/: Helper.cpp  Logger.cpp
(+10 files in other folders)
